force-app/main/default/objects/NotificationAutomaticSetting__c/NotificationAutomaticSetting__c.object-meta.xml
<CustomObject>
    <description>[i2sema] Automatic Notification Setting
메세지 알림 이벤트 설정</description>
    <label>Notification Automatic Setting</label>
    <nameField>
        <displayFormat>NTS-{yyMMdd}-{000000}</displayFormat>
        <label>Notification Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Automatic Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>