force-app/main/default/objects/NotificationAutomaticSetting__c/fields/ActivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivationDateTime__c</fullName>
    <label>Activation DateTime</label>
    <type>DateTime</type>
</CustomField>