force-app/main/default/objects/NotificationAutomaticSetting__c/fields/DeactivateDateTime__c.field-meta.xml
<CustomField>
    <fullName>DeactivateDateTime__c</fullName>
    <label>Deactivate DateTime</label>
    <type>DateTime</type>
</CustomField>