force-app/main/default/objects/NotificationAutomaticSetting__c/fields/ExecuteOn__c.field-meta.xml
<CustomField>
    <fullName>ExecuteOn__c</fullName>
    <label>Execute On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Insert or Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
                <isActive>false</isActive>
                <label>Delete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>