force-app/main/default/objects/NotificationAutomaticSetting__c/fields/FieldForSchedule__c.field-meta.xml
<CustomField>
    <fullName>FieldForSchedule__c</fullName>
    <label>Field For Schedule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>