force-app/main/default/objects/NotificationAutomaticSetting__c/fields/IsSchedule__c.field-meta.xml
<CustomField>
    <fullName>IsSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Schedule</label>
    <type>Checkbox</type>
</CustomField>