force-app/main/default/objects/NotificationAutomaticSetting__c/fields/Label1FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>Label1FieldAPI__c</fullName>
    <label>Label1  Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>