force-app/main/default/objects/NotificationAutomaticSetting__c/fields/Label2FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>Label2FieldAPI__c</fullName>
    <label>Label2 Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>