force-app/main/default/objects/NotificationAutomaticSetting__c/fields/Label3FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>Label3FieldAPI__c</fullName>
    <label>Label3 Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>