force-app/main/default/objects/NotificationAutomaticSetting__c/fields/LogicalExpression__c.field-meta.xml
<CustomField>
    <fullName>LogicalExpression__c</fullName>
    <label>Logical Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>