force-app/main/default/objects/NotificationAutomaticSetting__c/fields/NotificationTemplate__c.field-meta.xml
<CustomField>
    <fullName>NotificationTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notification Template</description>
    <label>Notification Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>NotificationTemplate__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.IsActive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.IsActive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NotificationTemplate__c</referenceTo>
    <relationshipName>NotificationSettings</relationshipName>
    <type>Lookup</type>
</CustomField>