force-app/main/default/objects/NotificationAutomaticSetting__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>