force-app/main/default/objects/NotificationAutomaticSetting__c/fields/RecipientField__c.field-meta.xml
<CustomField>
    <fullName>RecipientField__c</fullName>
    <label>Recipient Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>