force-app/main/default/objects/NotificationAutomaticSetting__c/fields/ScheduleBasedOn__c.field-meta.xml
<CustomField>
    <fullName>ScheduleBasedOn__c</fullName>
    <label>Schedule Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Datetime Field</fullName>
            </value>
            <value>
                <fullName>Rule Triggered Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>