force-app/main/default/objects/NotificationAutomaticSetting__c/fields/ScheduleTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduleTime__c</fullName>
    <label>Schedule Time (Hour)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>