force-app/main/default/objects/NotificationAutomaticSetting__c/listViews/ActivatedNotificationEvent.listView-meta.xml
<ListView>
    <fullName>ActivatedNotificationEvent</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>ObjectType__c</columns>
    <columns>ExecuteOn__c</columns>
    <columns>NotificationTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Activated Notification Event</label>
</ListView>